src/parser/config/parser.output
Terminale, die in Grammatik unbenutzt sind

   INVALID
   "("
   ")"


Zustand 17 Konflikte: 1 Schiebe/Reduziere
Zustand 31 Konflikte: 1 Schiebe/Reduziere
Zustand 51 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: start END_OF_FILE

    1 start: END_OF_FILE
    2      | topstatements
    3      | separators
    4      | separators topstatements

    5 separators: ";"
    6           | separators ";"

    7 topstatements: topstatement
    8              | topstatements separators
    9              | topstatements separators topstatement

   10 topstatement: classdef
   11             | deleteclass

   12 statements: statement
   13           | statements separators
   14           | statements separators statement

   15 statement: classdef
   16          | field
   17          | deleteclass

   18 classdef: "class" ident
   19         | "class" ident ":" ident
   20         | "class" ident classbody
   21         | "class" ident ":" ident classbody

   22 deleteclass: "delete" ident

   23 classbody: "{" "}"
   24          | "{" statements "}"

   25 field: ident "=" string
   26      | ident "=" number
   27      | ident "=" anyvalue
   28      | ident "[" "]" "=" array

   29 ident: IDENT

   30 string: STRING

   31 number: NUMBER
   32       | HEXNUMBER

   33 array: "{" "}"
   34      | "{" arrayvaluelist "}"

   35 arrayvalue: string
   36           | number
   37           | array
   38           | anyarray

   39 arrayvaluelist: arrayvalue
   40               | arrayvaluelist "," arrayvalue

   41 anyval: anyp
   42       | NUMBER
   43       | HEXNUMBER
   44       | STRING
   45       | "{"
   46       | "}"
   47       | ","

   48 anyarr: anyp
   49       | NUMBER
   50       | HEXNUMBER
   51       | STRING

   52 anyp: "class"
   53     | "delete"
   54     | IDENT
   55     | "["
   56     | "]"
   57     | ":"
   58     | "="
   59     | ANY

   60 anyarray: anyp
   61         | anyarray anyarr

   62 anyvalue: anyp
   63         | anyvalue anyval


Terminale und die Regeln, in denen sie verwendet werden

END_OF_FILE (0) 0 1
error (256)
INVALID (258)
"delete" (259) 22 53
"class" (260) 18 19 20 21 52
"{" (261) 23 24 33 34 45
"}" (262) 23 24 33 34 46
"(" (263)
")" (264)
"[" (265) 28 55
"]" (266) 28 56
":" (267) 19 21 57
";" (268) 5 6
"," (269) 40 47
"=" (270) 25 26 27 28 58
IDENT (271) 29 54
NUMBER (272) 31 42 49
HEXNUMBER (273) 32 43 50
STRING (274) 30 44 51
ANY (275) 59


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (21)
    auf der linken Seite: 0
start (22)
    auf der linken Seite: 1 2 3 4, auf der rechten Seite: 0
separators (23)
    auf der linken Seite: 5 6, auf der rechten Seite: 3 4 6 8 9 13
    14
topstatements (24)
    auf der linken Seite: 7 8 9, auf der rechten Seite: 2 4 8 9
topstatement (25)
    auf der linken Seite: 10 11, auf der rechten Seite: 7 9
statements (26)
    auf der linken Seite: 12 13 14, auf der rechten Seite: 13 14 24
statement (27)
    auf der linken Seite: 15 16 17, auf der rechten Seite: 12 14
classdef (28)
    auf der linken Seite: 18 19 20 21, auf der rechten Seite: 10 15
deleteclass (29)
    auf der linken Seite: 22, auf der rechten Seite: 11 17
classbody (30)
    auf der linken Seite: 23 24, auf der rechten Seite: 20 21
field (31)
    auf der linken Seite: 25 26 27 28, auf der rechten Seite: 16
ident (32)
    auf der linken Seite: 29, auf der rechten Seite: 18 19 20 21 22
    25 26 27 28
string (33)
    auf der linken Seite: 30, auf der rechten Seite: 25 35
number (34)
    auf der linken Seite: 31 32, auf der rechten Seite: 26 36
array (35)
    auf der linken Seite: 33 34, auf der rechten Seite: 28 37
arrayvalue (36)
    auf der linken Seite: 35 36 37 38, auf der rechten Seite: 39 40
arrayvaluelist (37)
    auf der linken Seite: 39 40, auf der rechten Seite: 34 40
anyval (38)
    auf der linken Seite: 41 42 43 44 45 46 47, auf der rechten Seite:
    63
anyarr (39)
    auf der linken Seite: 48 49 50 51, auf der rechten Seite: 61
anyp (40)
    auf der linken Seite: 52 53 54 55 56 57 58 59, auf der rechten Seite:
    41 48 60 62
anyarray (41)
    auf der linken Seite: 60 61, auf der rechten Seite: 38 61
anyvalue (42)
    auf der linken Seite: 62 63, auf der rechten Seite: 27 63


Zustand 0

    0 $accept: . start END_OF_FILE

    END_OF_FILE  schiebe und gehe zu Zustand 1 über
    "delete"     schiebe und gehe zu Zustand 2 über
    "class"      schiebe und gehe zu Zustand 3 über
    ";"          schiebe und gehe zu Zustand 4 über

    start          gehe zu Zustand 5 über
    separators     gehe zu Zustand 6 über
    topstatements  gehe zu Zustand 7 über
    topstatement   gehe zu Zustand 8 über
    classdef       gehe zu Zustand 9 über
    deleteclass    gehe zu Zustand 10 über


Zustand 1

    1 start: END_OF_FILE .

    $default  reduziere mit Regel 1 (start)


Zustand 2

   22 deleteclass: "delete" . ident

    IDENT  schiebe und gehe zu Zustand 11 über

    ident  gehe zu Zustand 12 über


Zustand 3

   18 classdef: "class" . ident
   19         | "class" . ident ":" ident
   20         | "class" . ident classbody
   21         | "class" . ident ":" ident classbody

    IDENT  schiebe und gehe zu Zustand 11 über

    ident  gehe zu Zustand 13 über


Zustand 4

    5 separators: ";" .

    $default  reduziere mit Regel 5 (separators)


Zustand 5

    0 $accept: start . END_OF_FILE

    END_OF_FILE  schiebe und gehe zu Zustand 14 über


Zustand 6

    3 start: separators .
    4      | separators . topstatements
    6 separators: separators . ";"

    "delete"  schiebe und gehe zu Zustand 2 über
    "class"   schiebe und gehe zu Zustand 3 über
    ";"       schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 3 (start)

    topstatements  gehe zu Zustand 16 über
    topstatement   gehe zu Zustand 8 über
    classdef       gehe zu Zustand 9 über
    deleteclass    gehe zu Zustand 10 über


Zustand 7

    2 start: topstatements .
    8 topstatements: topstatements . separators
    9              | topstatements . separators topstatement

    ";"  schiebe und gehe zu Zustand 4 über

    $default  reduziere mit Regel 2 (start)

    separators  gehe zu Zustand 17 über


Zustand 8

    7 topstatements: topstatement .

    $default  reduziere mit Regel 7 (topstatements)


Zustand 9

   10 topstatement: classdef .

    $default  reduziere mit Regel 10 (topstatement)


Zustand 10

   11 topstatement: deleteclass .

    $default  reduziere mit Regel 11 (topstatement)


Zustand 11

   29 ident: IDENT .

    $default  reduziere mit Regel 29 (ident)


Zustand 12

   22 deleteclass: "delete" ident .

    $default  reduziere mit Regel 22 (deleteclass)


Zustand 13

   18 classdef: "class" ident .
   19         | "class" ident . ":" ident
   20         | "class" ident . classbody
   21         | "class" ident . ":" ident classbody

    "{"  schiebe und gehe zu Zustand 18 über
    ":"  schiebe und gehe zu Zustand 19 über

    $default  reduziere mit Regel 18 (classdef)

    classbody  gehe zu Zustand 20 über


Zustand 14

    0 $accept: start END_OF_FILE .

    $default  annehmen


Zustand 15

    6 separators: separators ";" .

    $default  reduziere mit Regel 6 (separators)


Zustand 16

    4 start: separators topstatements .
    8 topstatements: topstatements . separators
    9              | topstatements . separators topstatement

    ";"  schiebe und gehe zu Zustand 4 über

    $default  reduziere mit Regel 4 (start)

    separators  gehe zu Zustand 17 über


Zustand 17

    6 separators: separators . ";"
    8 topstatements: topstatements separators .
    9              | topstatements separators . topstatement

    "delete"  schiebe und gehe zu Zustand 2 über
    "class"   schiebe und gehe zu Zustand 3 über
    ";"       schiebe und gehe zu Zustand 15 über

    ";"       [reduziere mit Regel 8 (topstatements)]
    $default  reduziere mit Regel 8 (topstatements)

    topstatement  gehe zu Zustand 21 über
    classdef      gehe zu Zustand 9 über
    deleteclass   gehe zu Zustand 10 über


Zustand 18

   23 classbody: "{" . "}"
   24          | "{" . statements "}"

    "delete"  schiebe und gehe zu Zustand 2 über
    "class"   schiebe und gehe zu Zustand 3 über
    "}"       schiebe und gehe zu Zustand 22 über
    IDENT     schiebe und gehe zu Zustand 11 über

    statements   gehe zu Zustand 23 über
    statement    gehe zu Zustand 24 über
    classdef     gehe zu Zustand 25 über
    deleteclass  gehe zu Zustand 26 über
    field        gehe zu Zustand 27 über
    ident        gehe zu Zustand 28 über


Zustand 19

   19 classdef: "class" ident ":" . ident
   21         | "class" ident ":" . ident classbody

    IDENT  schiebe und gehe zu Zustand 11 über

    ident  gehe zu Zustand 29 über


Zustand 20

   20 classdef: "class" ident classbody .

    $default  reduziere mit Regel 20 (classdef)


Zustand 21

    9 topstatements: topstatements separators topstatement .

    $default  reduziere mit Regel 9 (topstatements)


Zustand 22

   23 classbody: "{" "}" .

    $default  reduziere mit Regel 23 (classbody)


Zustand 23

   13 statements: statements . separators
   14           | statements . separators statement
   24 classbody: "{" statements . "}"

    "}"  schiebe und gehe zu Zustand 30 über
    ";"  schiebe und gehe zu Zustand 4 über

    separators  gehe zu Zustand 31 über


Zustand 24

   12 statements: statement .

    $default  reduziere mit Regel 12 (statements)


Zustand 25

   15 statement: classdef .

    $default  reduziere mit Regel 15 (statement)


Zustand 26

   17 statement: deleteclass .

    $default  reduziere mit Regel 17 (statement)


Zustand 27

   16 statement: field .

    $default  reduziere mit Regel 16 (statement)


Zustand 28

   25 field: ident . "=" string
   26      | ident . "=" number
   27      | ident . "=" anyvalue
   28      | ident . "[" "]" "=" array

    "["  schiebe und gehe zu Zustand 32 über
    "="  schiebe und gehe zu Zustand 33 über


Zustand 29

   19 classdef: "class" ident ":" ident .
   21         | "class" ident ":" ident . classbody

    "{"  schiebe und gehe zu Zustand 18 über

    $default  reduziere mit Regel 19 (classdef)

    classbody  gehe zu Zustand 34 über


Zustand 30

   24 classbody: "{" statements "}" .

    $default  reduziere mit Regel 24 (classbody)


Zustand 31

    6 separators: separators . ";"
   13 statements: statements separators .
   14           | statements separators . statement

    "delete"  schiebe und gehe zu Zustand 2 über
    "class"   schiebe und gehe zu Zustand 3 über
    ";"       schiebe und gehe zu Zustand 15 über
    IDENT     schiebe und gehe zu Zustand 11 über

    ";"       [reduziere mit Regel 13 (statements)]
    $default  reduziere mit Regel 13 (statements)

    statement    gehe zu Zustand 35 über
    classdef     gehe zu Zustand 25 über
    deleteclass  gehe zu Zustand 26 über
    field        gehe zu Zustand 27 über
    ident        gehe zu Zustand 28 über


Zustand 32

   28 field: ident "[" . "]" "=" array

    "]"  schiebe und gehe zu Zustand 36 über


Zustand 33

   25 field: ident "=" . string
   26      | ident "=" . number
   27      | ident "=" . anyvalue

    "delete"   schiebe und gehe zu Zustand 37 über
    "class"    schiebe und gehe zu Zustand 38 über
    "["        schiebe und gehe zu Zustand 39 über
    "]"        schiebe und gehe zu Zustand 40 über
    ":"        schiebe und gehe zu Zustand 41 über
    "="        schiebe und gehe zu Zustand 42 über
    IDENT      schiebe und gehe zu Zustand 43 über
    NUMBER     schiebe und gehe zu Zustand 44 über
    HEXNUMBER  schiebe und gehe zu Zustand 45 über
    STRING     schiebe und gehe zu Zustand 46 über
    ANY        schiebe und gehe zu Zustand 47 über

    string    gehe zu Zustand 48 über
    number    gehe zu Zustand 49 über
    anyp      gehe zu Zustand 50 über
    anyvalue  gehe zu Zustand 51 über


Zustand 34

   21 classdef: "class" ident ":" ident classbody .

    $default  reduziere mit Regel 21 (classdef)


Zustand 35

   14 statements: statements separators statement .

    $default  reduziere mit Regel 14 (statements)


Zustand 36

   28 field: ident "[" "]" . "=" array

    "="  schiebe und gehe zu Zustand 52 über


Zustand 37

   53 anyp: "delete" .

    $default  reduziere mit Regel 53 (anyp)


Zustand 38

   52 anyp: "class" .

    $default  reduziere mit Regel 52 (anyp)


Zustand 39

   55 anyp: "[" .

    $default  reduziere mit Regel 55 (anyp)


Zustand 40

   56 anyp: "]" .

    $default  reduziere mit Regel 56 (anyp)


Zustand 41

   57 anyp: ":" .

    $default  reduziere mit Regel 57 (anyp)


Zustand 42

   58 anyp: "=" .

    $default  reduziere mit Regel 58 (anyp)


Zustand 43

   54 anyp: IDENT .

    $default  reduziere mit Regel 54 (anyp)


Zustand 44

   31 number: NUMBER .

    $default  reduziere mit Regel 31 (number)


Zustand 45

   32 number: HEXNUMBER .

    $default  reduziere mit Regel 32 (number)


Zustand 46

   30 string: STRING .

    $default  reduziere mit Regel 30 (string)


Zustand 47

   59 anyp: ANY .

    $default  reduziere mit Regel 59 (anyp)


Zustand 48

   25 field: ident "=" string .

    $default  reduziere mit Regel 25 (field)


Zustand 49

   26 field: ident "=" number .

    $default  reduziere mit Regel 26 (field)


Zustand 50

   62 anyvalue: anyp .

    $default  reduziere mit Regel 62 (anyvalue)


Zustand 51

   27 field: ident "=" anyvalue .
   63 anyvalue: anyvalue . anyval

    "delete"   schiebe und gehe zu Zustand 37 über
    "class"    schiebe und gehe zu Zustand 38 über
    "{"        schiebe und gehe zu Zustand 53 über
    "}"        schiebe und gehe zu Zustand 54 über
    "["        schiebe und gehe zu Zustand 39 über
    "]"        schiebe und gehe zu Zustand 40 über
    ":"        schiebe und gehe zu Zustand 41 über
    ","        schiebe und gehe zu Zustand 55 über
    "="        schiebe und gehe zu Zustand 42 über
    IDENT      schiebe und gehe zu Zustand 43 über
    NUMBER     schiebe und gehe zu Zustand 56 über
    HEXNUMBER  schiebe und gehe zu Zustand 57 über
    STRING     schiebe und gehe zu Zustand 58 über
    ANY        schiebe und gehe zu Zustand 47 über

    "}"       [reduziere mit Regel 27 (field)]
    $default  reduziere mit Regel 27 (field)

    anyval  gehe zu Zustand 59 über
    anyp    gehe zu Zustand 60 über


Zustand 52

   28 field: ident "[" "]" "=" . array

    "{"  schiebe und gehe zu Zustand 61 über

    array  gehe zu Zustand 62 über


Zustand 53

   45 anyval: "{" .

    $default  reduziere mit Regel 45 (anyval)


Zustand 54

   46 anyval: "}" .

    $default  reduziere mit Regel 46 (anyval)


Zustand 55

   47 anyval: "," .

    $default  reduziere mit Regel 47 (anyval)


Zustand 56

   42 anyval: NUMBER .

    $default  reduziere mit Regel 42 (anyval)


Zustand 57

   43 anyval: HEXNUMBER .

    $default  reduziere mit Regel 43 (anyval)


Zustand 58

   44 anyval: STRING .

    $default  reduziere mit Regel 44 (anyval)


Zustand 59

   63 anyvalue: anyvalue anyval .

    $default  reduziere mit Regel 63 (anyvalue)


Zustand 60

   41 anyval: anyp .

    $default  reduziere mit Regel 41 (anyval)


Zustand 61

   33 array: "{" . "}"
   34      | "{" . arrayvaluelist "}"

    "delete"   schiebe und gehe zu Zustand 37 über
    "class"    schiebe und gehe zu Zustand 38 über
    "{"        schiebe und gehe zu Zustand 61 über
    "}"        schiebe und gehe zu Zustand 63 über
    "["        schiebe und gehe zu Zustand 39 über
    "]"        schiebe und gehe zu Zustand 40 über
    ":"        schiebe und gehe zu Zustand 41 über
    "="        schiebe und gehe zu Zustand 42 über
    IDENT      schiebe und gehe zu Zustand 43 über
    NUMBER     schiebe und gehe zu Zustand 44 über
    HEXNUMBER  schiebe und gehe zu Zustand 45 über
    STRING     schiebe und gehe zu Zustand 46 über
    ANY        schiebe und gehe zu Zustand 47 über

    string          gehe zu Zustand 64 über
    number          gehe zu Zustand 65 über
    array           gehe zu Zustand 66 über
    arrayvalue      gehe zu Zustand 67 über
    arrayvaluelist  gehe zu Zustand 68 über
    anyp            gehe zu Zustand 69 über
    anyarray        gehe zu Zustand 70 über


Zustand 62

   28 field: ident "[" "]" "=" array .

    $default  reduziere mit Regel 28 (field)


Zustand 63

   33 array: "{" "}" .

    $default  reduziere mit Regel 33 (array)


Zustand 64

   35 arrayvalue: string .

    $default  reduziere mit Regel 35 (arrayvalue)


Zustand 65

   36 arrayvalue: number .

    $default  reduziere mit Regel 36 (arrayvalue)


Zustand 66

   37 arrayvalue: array .

    $default  reduziere mit Regel 37 (arrayvalue)


Zustand 67

   39 arrayvaluelist: arrayvalue .

    $default  reduziere mit Regel 39 (arrayvaluelist)


Zustand 68

   34 array: "{" arrayvaluelist . "}"
   40 arrayvaluelist: arrayvaluelist . "," arrayvalue

    "}"  schiebe und gehe zu Zustand 71 über
    ","  schiebe und gehe zu Zustand 72 über


Zustand 69

   60 anyarray: anyp .

    $default  reduziere mit Regel 60 (anyarray)


Zustand 70

   38 arrayvalue: anyarray .
   61 anyarray: anyarray . anyarr

    "delete"   schiebe und gehe zu Zustand 37 über
    "class"    schiebe und gehe zu Zustand 38 über
    "["        schiebe und gehe zu Zustand 39 über
    "]"        schiebe und gehe zu Zustand 40 über
    ":"        schiebe und gehe zu Zustand 41 über
    "="        schiebe und gehe zu Zustand 42 über
    IDENT      schiebe und gehe zu Zustand 43 über
    NUMBER     schiebe und gehe zu Zustand 73 über
    HEXNUMBER  schiebe und gehe zu Zustand 74 über
    STRING     schiebe und gehe zu Zustand 75 über
    ANY        schiebe und gehe zu Zustand 47 über

    $default  reduziere mit Regel 38 (arrayvalue)

    anyarr  gehe zu Zustand 76 über
    anyp    gehe zu Zustand 77 über


Zustand 71

   34 array: "{" arrayvaluelist "}" .

    $default  reduziere mit Regel 34 (array)


Zustand 72

   40 arrayvaluelist: arrayvaluelist "," . arrayvalue

    "delete"   schiebe und gehe zu Zustand 37 über
    "class"    schiebe und gehe zu Zustand 38 über
    "{"        schiebe und gehe zu Zustand 61 über
    "["        schiebe und gehe zu Zustand 39 über
    "]"        schiebe und gehe zu Zustand 40 über
    ":"        schiebe und gehe zu Zustand 41 über
    "="        schiebe und gehe zu Zustand 42 über
    IDENT      schiebe und gehe zu Zustand 43 über
    NUMBER     schiebe und gehe zu Zustand 44 über
    HEXNUMBER  schiebe und gehe zu Zustand 45 über
    STRING     schiebe und gehe zu Zustand 46 über
    ANY        schiebe und gehe zu Zustand 47 über

    string      gehe zu Zustand 64 über
    number      gehe zu Zustand 65 über
    array       gehe zu Zustand 66 über
    arrayvalue  gehe zu Zustand 78 über
    anyp        gehe zu Zustand 69 über
    anyarray    gehe zu Zustand 70 über


Zustand 73

   49 anyarr: NUMBER .

    $default  reduziere mit Regel 49 (anyarr)


Zustand 74

   50 anyarr: HEXNUMBER .

    $default  reduziere mit Regel 50 (anyarr)


Zustand 75

   51 anyarr: STRING .

    $default  reduziere mit Regel 51 (anyarr)


Zustand 76

   61 anyarray: anyarray anyarr .

    $default  reduziere mit Regel 61 (anyarray)


Zustand 77

   48 anyarr: anyp .

    $default  reduziere mit Regel 48 (anyarr)


Zustand 78

   40 arrayvaluelist: arrayvaluelist "," arrayvalue .

    $default  reduziere mit Regel 40 (arrayvaluelist)
